--- a/src/main.jade
+++ b/src/main.jade
@@ -503,106 +503,127 @@ html(lang='en')
 						button(type="submit") Найти решение
 			.partners
 				.wrap
+					.label-holder
+						h1 Нам доверяют
 					.parnters-holder
 						.lnb.disabled
 						.caroufredsel_wrapper
 							.parnters-container
 								.part
-									img(src='/upload/iblock/4b3/HyundaiLogo.png', data-href='/nashi-klienty/?client=472')
+									img(src='http://justicon.ua/upload/iblock/4b3/HyundaiLogo.png', data-href='/nashi-klienty/?client=472')
 								.part
-									img(src='/upload/iblock/22a/KIA.png', data-href='/nashi-klienty/?client=471')
+									img(src='http://justicon.ua/upload/iblock/22a/KIA.png', data-href='/nashi-klienty/?client=471')
 								.part
-									img(src='/upload/iblock/995/Luxoft_logo.png', data-href='/nashi-klienty/?client=470')
+									img(src='http://justicon.ua/upload/iblock/995/Luxoft_logo.png', data-href='/nashi-klienty/?client=470')
 								.part
-									img(src='/upload/iblock/219/EPAM_logo.png', data-href='/nashi-klienty/?client=469')
+									img(src='http://justicon.ua/upload/iblock/219/EPAM_logo.png', data-href='/nashi-klienty/?client=469')
 								.part
-									img(src='/upload/iblock/543/yandex2.png', data-href='/nashi-klienty/?client=487')
+									img(src='http://justicon.ua/upload/iblock/543/yandex2.png', data-href='/nashi-klienty/?client=487')
 								.part
-									img(src='/upload/iblock/474/Metinvest_Logo_Ukr2.png', data-href='/nashi-klienty/?client=474')
+									img(src='http://justicon.ua/upload/iblock/474/Metinvest_Logo_Ukr2.png', data-href='/nashi-klienty/?client=474')
 								.part
-									img(src='/upload/iblock/797/carlsberg_crown_logo_on_green.jpg', data-href='/nashi-klienty/?client=488')
+									img(src='http://justicon.ua/upload/iblock/797/carlsberg_crown_logo_on_green.jpg', data-href='/nashi-klienty/?client=488')
 								.part
-									img(src='/upload/iblock/f97/Logo_OTIS300dpi.png', data-href='/nashi-klienty/?client=486')
+									img(src='http://justicon.ua/upload/iblock/f97/Logo_OTIS300dpi.png', data-href='/nashi-klienty/?client=486')
 								.part
-									img(src='/upload/iblock/0fc/new_csa_logo_mar_2008.png', data-href='/nashi-klienty/?client=490')
+									img(src='http://justicon.ua/upload/iblock/0fc/new_csa_logo_mar_2008.png', data-href='/nashi-klienty/?client=490')
 								.part
-									img(src='/upload/iblock/c78/Лисод.png', data-href='/nashi-klienty/?client=473')
+									img(src='http://justicon.ua/upload/iblock/c78/Лисод.png', data-href='/nashi-klienty/?client=473')
 								.part
-									img(src='/upload/iblock/293/Кировский завод ОЦМ.png', data-href='/nashi-klienty/?client=475')
+									img(src='http://justicon.ua/upload/iblock/293/Кировский завод ОЦМ.png', data-href='/nashi-klienty/?client=475')
 								.part
-									img(src='/upload/iblock/bad/ЕВРАЗ.png', data-href='/nashi-klienty/?client=489')
+									img(src='http://justicon.ua/upload/iblock/bad/ЕВРАЗ.png', data-href='/nashi-klienty/?client=489')
 								.part
-									img(src='/upload/iblock/033/uralremont.png', data-href='/nashi-klienty/?client=477')
+									img(src='http://justicon.ua/upload/iblock/033/uralremont.png', data-href='/nashi-klienty/?client=477')
 								.part
-									img(src='/upload/iblock/b18/ukrdom.png', data-href='/nashi-klienty/?client=479')
+									img(src='http://justicon.ua/upload/iblock/b18/ukrdom.png', data-href='/nashi-klienty/?client=479')
 								.part
-									img(src='/upload/iblock/bca/КРИВБАССПЕЦПРОЕКТ.png', data-href='/nashi-klienty/?client=478')
+									img(src='http://justicon.ua/upload/iblock/bca/КРИВБАССПЕЦПРОЕКТ.png', data-href='/nashi-klienty/?client=478')
 								.part
-									img(src='/upload/iblock/49e/vse-logo.png', data-href='/nashi-klienty/?client=480')
+									img(src='http://justicon.ua/upload/iblock/49e/vse-logo.png', data-href='/nashi-klienty/?client=480')
 								.part
-									img(src='/upload/iblock/72b/ua-tenders.gif', data-href='/nashi-klienty/?client=481')
+									img(src='http://justicon.ua/upload/iblock/72b/ua-tenders.gif', data-href='/nashi-klienty/?client=481')
 								.part
-									img(src='/upload/iblock/966/TENTE.png', data-href='/nashi-klienty/?client=492')
+									img(src='http://justicon.ua/upload/iblock/966/TENTE.png', data-href='/nashi-klienty/?client=492')
 								.part
-									img(src='/upload/iblock/fb3/TMM.png', data-href='/nashi-klienty/?client=493')
+									img(src='http://justicon.ua/upload/iblock/fb3/TMM.png', data-href='/nashi-klienty/?client=493')
 								.part
-									img(src='/upload/iblock/b68/horizont.png', data-href='/nashi-klienty/?client=482')
+									img(src='http://justicon.ua/upload/iblock/b68/horizont.png', data-href='/nashi-klienty/?client=482')
 								.part
-									img(src='/upload/iblock/f80/ЕБЕРСПЕХЕР-logo.png', data-href='/nashi-klienty/?client=495')
+									img(src='http://justicon.ua/upload/iblock/f80/ЕБЕРСПЕХЕР-logo.png', data-href='/nashi-klienty/?client=495')
 								.part
-									img(src='/upload/iblock/abc/asmap_1.png', data-href='/nashi-klienty/?client=496')
+									img(src='http://justicon.ua/upload/iblock/abc/asmap_1.png', data-href='/nashi-klienty/?client=496')
 								.part
-									img(src='/upload/iblock/2ec/14284.png', data-href='/nashi-klienty/?client=497')
+									img(src='http://justicon.ua/upload/iblock/2ec/14284.png', data-href='/nashi-klienty/?client=497')
 								.part
-									img(src='/upload/iblock/b9a/DEC.gif', data-href='/nashi-klienty/?client=498')
+									img(src='http://justicon.ua/upload/iblock/b9a/DEC.gif', data-href='/nashi-klienty/?client=498')
 								.part
-									img(src='/upload/iblock/a96/ITK-logo-ua.gif', data-href='/nashi-klienty/?client=483')
+									img(src='http://justicon.ua/upload/iblock/a96/ITK-logo-ua.gif', data-href='/nashi-klienty/?client=483')
 								.part
-									img(src='/upload/iblock/241/gazetaua.png', data-href='/nashi-klienty/?client=484')
+									img(src='http://justicon.ua/upload/iblock/241/gazetaua.png', data-href='/nashi-klienty/?client=484')
 								.part
-									img(src='/upload/iblock/9c1/site2.fd968aa3e6db262dda98d05d1cfd7f0d[1].jpg', data-href='/nashi-klienty/?client=491')
+									img(src='http://justicon.ua/upload/iblock/9c1/site2.fd968aa3e6db262dda98d05d1cfd7f0d[1].jpg', data-href='/nashi-klienty/?client=491')
 								.part
-									img(src='/upload/iblock/52a/kmv.png', data-href='/nashi-klienty/?client=485')
+									img(src='http://justicon.ua/upload/iblock/52a/kmv.png', data-href='/nashi-klienty/?client=485')
 								.part
-									img(src='/upload/iblock/0e2/gagarin.jpg', data-href='/nashi-klienty/?client=494')
+									img(src='http://justicon.ua/upload/iblock/0e2/gagarin.jpg', data-href='/nashi-klienty/?client=494')
 						.rnb
+						.controls
+							.page.active
+							.page
+							.page
+							.page
 						.clear
-			.news
+
+			.top-news
 				.wrap
-					.news-container
-						ul
-							li.active(data-cont='nc1')
-								.cont
-									a(href='#') Новости права
-							li(data-cont='nc4')
-								.cont
-									a(href='#') Мнение эксперта
-							li(data-cont='nc2')
-								.cont
-									a(href='#') Публикации
-							li.last(data-cont='nc3')
-								.cont
-									a(href='#') Рассылка
+					.top-news-holder
+						.lnb.disabled
+						.caroufredsel_wrapper
+							.parnters-container
+								.part
+									span.label Хочу оформить частное предприятие
+									img(src='https://unsplash.it/325/300?image=1059', data-href='/nashi-klienty/?client=472')
+									a.btn(href="#") Узнать больше
+								.part
+									span.label Что необходимо учитывать при оформлении документов
+									img(src='https://unsplash.it/325/300?image=1048', data-href='/nashi-klienty/?client=471')
+									a.btn(href="#") Узнать больше
+								.part
+									span.label Лицензирование и сертификация
+									img(src='https://unsplash.it/325/300?image=998', data-href='/nashi-klienty/?client=470')
+									a.btn(href="#") Узнать больше
+								.part
+									span.label Хочу оформить частное предприятие
+									img(src='https://unsplash.it/325/300?image=983', data-href='/nashi-klienty/?client=469')
+									a.btn(href="#") Узнать больше
+								.part
+									span.label Хочу оформить частное предприятие
+									img(src='https://unsplash.it/325/300?image=972', data-href='/nashi-klienty/?client=487')
+									a.btn(href="#") Узнать больше
+								.part
+									span.label Хочу оформить частное предприятие
+									img(src='https://unsplash.it/325/300?image=885', data-href='/nashi-klienty/?client=474')
+									a.btn(href="#") Узнать больше
+								.part
+									span.label Хочу оформить частное предприятие
+									img(src='https://unsplash.it/325/300?image=679', data-href='/nashi-klienty/?client=488')
+									a.btn(href="#") Узнать больше
+						.rnb
+						.controls
+							.page.active
+							.page
+							.page
+							.page
 						.clear
-						.cont.list.nc1
-							p
-								font.errortext Раздел не найден.
-						.cont.list.nc2
-							p
-								font.errortext Раздел не найден.
-						.cont.list.nc3
-							p
-								font.errortext Раздел не найден.
-						.cont.list.nc4
-							p
-								font.errortext Раздел не найден.
-					.twitter
-						iframe#twitter-widget-0.twitter-timeline.twitter-timeline-rendered(scrolling='no', frameborder='0', allowtransparency='true', allowfullscreen='true', style='position: static; visibility: visible; display: inline-block; width: 520px; height: 400px; padding: 0px; border: none; max-width: 100%; min-width: 180px; margin-top: 0px; margin-bottom: 0px; min-height: 200px;', data-widget-id='509349750508777472', title='Twitter Timeline')
-					.clear
 
 		.about.opensans
 			.wrap
 				| Юридическая компания «ЮСТИКОН» была основана в Киеве в 2008 году. За время работы была сформирована команда юристов, ориентированных на достижение результата в любом юридическом вопросе. На сегодня компания объединяет около 20 специалистов в различных отраслях права. Благодаря опыту работы и успешной реализации проектов компания существенно расширила спектр предоставляемых услуг. Была разработана идеология, созданная основательная ресурсная база. Все это позволило занять собственную нишу на рынке юридических услуг. Компания «ЮСТИКОН» стала надежным юридическим консультантом для малого и среднего бизнеса в Украине, что подтверждается доверием постоянных клиентов.
+
+		form(action="#").search-input-1
+			input.text(type='text', placeholder='Поиск')
+			input.submit(type='submit', value='найти')
 		.footer
 			.t
 				.wrap
