--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -20,6 +20,20 @@
 .container
 	display: block
 
+
+.controls
+	text-align: center
+	margin-top: 58px
+	.page
+		display: inline-block
+		border: 1px solid #000
+		height: 10px
+		width: 10px
+		border-radius: 50%
+		margin: 0 8px
+		&.active
+			background-color: #243e57
+
 .menu
 	background-color: #36393d
 	color: #eee
@@ -99,8 +113,6 @@
 		position: absolute
 		left: 0
 		top: 18px
-
-// .wrap
 
 .header
 	.logo.invisible
@@ -369,6 +381,188 @@
 						background: #fff
 						opacity: 1
 						transform: scale(1)
+
+
+.search-section
+	background: url('../img/bg/search-bg.jpg') 50% 50% no-repeat
+	background-size: cover
+	margin-top: -16px
+	.wrap
+		margin: 0 auto
+		padding: 81px 20px 90px
+		width: 100%
+		max-width: 882px
+	.search-wrapper
+		text-align: center
+		h1
+			line-height: 1em
+			margin: 0 0 22px
+			color: #333
+			font-size: 40px
+			font-weight: 100
+		.input-form
+			input
+				background-color: white
+				border: 1px solid #e2e2e2
+				box-shadow: inset 0 2px 2px rgba(0, 0, 0, 0.1)
+				height: 50px
+				margin-bottom: 25px
+				width: 100%
+				&::placeholder
+					color: #333
+					font-size: 18px
+					font-weight: 300
+					text-align: center
+		button
+			background-color: #f54f29
+			border-radius: 3px
+			color: white
+			font-size: 14px
+			font-weight: 400
+			padding: 14px 40px
+			text-transform: uppercase
+
+.partners
+	.wrap
+	.label-holder
+		text-align: center
+		margin-top: 38px
+		margin-bottom: 29px
+		h1, h2, h3, h4, h5, h6
+			color: #333
+			font-size: 30px
+			font-weight: 300
+			line-height: 1em
+	.parnters-holder
+		.lnb.disabled
+		.caroufredsel_wrapper
+			overflow: hidden
+			overflow-x: auto
+			overflow-y: hidden
+			&::-webkit-scrollbar
+				height: 0
+				width: 0
+			.parnters-container
+				white-space: nowrap
+				width: 300%
+				.part
+					display: inline-block
+					vertical-align: middle
+					// max-height: 100px
+					// max-width: 100px
+					text-align: center
+					margin: 0 20px
+
+.top-news
+	margin-top: 56px
+	.wrap
+	.top-news-holder
+		.lnb.disabled
+		.caroufredsel_wrapper
+			.parnters-container
+				font-size: 0
+				letter-spacing: 0
+				.part
+					position: relative
+					display: inline-block
+					.label
+						color: #36393d
+						font-size: 20px
+						font-weight: 300
+						line-height: 24px
+						overflow: hidden
+						max-height: 50%
+						position: absolute
+						left: 0
+					img
+					.btn
+						color: white
+						font-size: 14px
+						font-weight: 400
+						text-transform: uppercase
+						background-color: #243e57
+						border-radius: 3px
+						padding: 15px 26px
+						position: absolute
+						bottom: 46px
+						white-space: nowrap
+						left: 50%
+						transform: translateX(-50%)
+
+.about.opensans
+	color: #777
+	font-size: 14px
+	font-weight: 400
+	line-height: 20px
+	.wrap
+		margin: 0 auto
+		width: 80%
+
+
+.search-input-1
+	position: relative
+	overflow: hidden
+	margin: 0 auto
+	width: 80%
+	// @media (max-width: $mobile-large)
+	// 	margin-bottom: 35px
+	// 	width: 100%
+	input[type="text"], input.text
+		background-color: #ffffff
+		border: 1px solid #e2e2e2
+		box-shadow: inset 0 2px 2px rgba(0, 0, 0, 0.1)
+		height: 49px
+		margin: 0
+		padding-left: 20px
+		width: 100%
+		&::placeholder
+			color: #666
+			font-size: 16px
+			font-weight: 300
+		&:focus ~, &.focus ~
+			input[type="submit"], input.submit
+					transform: translateY(0)
+					transition: transform .3s
+	input[type="submit"], input.submit
+		display: inline-block
+		height: 49px
+		position: absolute
+		top: 0
+		right: 0
+		background: none
+		border: none
+		color: $main-color
+		font-size: 15px
+		font-weight: 700
+		transform: translateY(100%)
+		transition: transform .3s .6s
+		text-transform: uppercase
+
+.footer
+	background-color: #bed8f0
+	.wrap
+		letter-spacing: 0
+		font-size: 0
+		margin: 0 auto
+		width: 80%
+	a
+		color: #666
+		font-size: 12px
+		font-weight: 400
+		line-height: 15px
+	.b-all
+		display: inline-block
+		vertical-align: top
+		width: 33.3%
+		float: left
+	.b1
+		@extend .b-all
+	.b2
+		@extend .b-all
+	.b3
+		@extend .b-all
+	.b4
+		@extend .b-all
 
 /* Start:/bitrix/templates/usticon/css/sprites.css*/
 .r-trng, .l-trng, .ic-fb, .ic-gplus, .ic-twitter, .ic-email, .ic-lj, .ic-vk, .soc2, .soc1, .soc3, .soc4, .soc5, .eng, .rus, .ukr, .s-1, .ic-logo, .ic-phone, .zoom, .close, .smlogo, .blackphone, .s5, .s6, .s7, .s8, .s4, .s3, .s2, .s1, .skype
