--- a/src/css/global.sass
+++ b/src/css/global.sass
@@ -49,10 +49,11 @@ a
 	text-decoration: none
 
 p
-	color: $main-color
-	font-size: 17px
+	// color: $main-color
+	// font-size: 17px
+	// letter-spacing: 0.4px;
+	font: $font-stack
 	font-weight: 400
-	letter-spacing: 0.4px;
 	line-height: 1.5em
 
 img
@@ -588,9 +589,6 @@ button:active, .btn:active, button:focus, .btn:focus
 			float: left
 			.slide-wrapper
 				transform: translateZ(0)
-.paginator-holder
-	.page
-		cursor: pointer
 
 .modal-holder a.close-modal, .modal-holder .close-modal
 	background: url('../img/icons/cross-button-2.svg') no-repeat 50% 50%
