--- a/src/css/animations.sass
+++ b/src/css/animations.sass
@@ -1,4 +1,21 @@
 
+@keyframes modalOpen
+	from
+		transform: translate(0, 40px)
+		opacity: 0
+
+	to
+		transform: translate(0, 0)
+		opacity: 1
+@keyframes modalClose
+	from
+		transform: translate(0, 0)
+		opacity: 1
+
+	to
+		transform: translate(0, 40px)
+		opacity: 0
+
 @keyframes fadeIn
 	from
 		opacity: 0
