--- a/src/main.jade
+++ b/src/main.jade
@@ -32,9 +32,6 @@ html(lang='en')
 								span Почему мы
 							.submenu
 								a.close(href='#')
-								.header
-									a(href='#')
-										span Почему мы
 								.inner
 									.block-item
 										.title
@@ -55,9 +52,6 @@ html(lang='en')
 								span Пресс-центр
 							.submenu
 								a.close(href='#')
-								.header
-									a(href='#')
-										span Пресс-центр
 								.inner
 									.block-item
 										.title
@@ -638,407 +632,6 @@ html(lang='en')
 					.wrap
 						input.text(type='text', placeholder='Поиск')
 						input.submit(type='submit', value='найти')
-		.footer
-			.t
-				.wrap
-					.b1
-						p.head
-							span Услуги
-						p
-							a(href='/uslugi/korp/') Корпоративные правоотношения
-						p
-							a(href='/uslugi/lits/') Лицензии, разрешения, сертификация
-						p
-							a(href='/uslugi/sud/') Судебная практика
-						p
-							a(href='/uslugi/zem/') Недвижимость, строительство, земельное право
-						p
-							a(href='/uslugi/migr/') Миграционное право
-						p
-							a(href='/uslugi/int/') Интеллектуальное право
-						p
-							a(href='/uslugi/abon/') Абонентское обслуживание
-						p
-							a(href='/uslugi/konsalting/') Налоговый и юридический консалтинг. Антимонопольное право
-					.b2
-						p.head
-							span Почему мы
-						p
-							a(href='/about/') О компании
-						p
-							a(href='/uspeshnyy-rezultat/') Успешный результат
-						p
-							a(href='/nashi-klienty/') Наши клиенты
-					.b3
-						p.head
-							span Пресс-центр
-						p
-							a(href='/press-tsentr/novosti-prava/') Новости права
-						p
-							a(href='/press-tsentr/expert/') Мнение эксперта
-						p
-							a(href='/press-tsentr/publikatsii/') Публикации
-						p
-							a(href='/press-tsentr/rassylka/') Рассылка
-					.b4
-						p.head
-							span Информ-бюро
-						p
-							a(href='/inform-byuro/adresnaya-kniga/') Адресная книга
-						p
-							a(href='/inform-byuro/spravochnaya-informatsiya/') Справочная информация
-					.b5
-						p
-							b Контакты
-						p
-							| Тел: 
-							span.b1d (044) 221 4000
-						p
-							| Skype: 
-							span.blue justicon.ua
-						p
-							| E-mail: 
-							span.blue
-								a.email(href='mailto:info@justicon.ua') info@justicon.ua
-					.soc
-						p.head
-							span Мы в соцсетях
-						div
-							a.soc1(rel='nofollow', target='_blank', href='https://www.facebook.com/justicon')
-							noindex
-								a(rel='nofollow', target='_blank', href='https://www.facebook.com/justicon') Facebook
-						div
-							a.soc2(rel='nofollow', target='_blank', href='http://vk.com/justicon')
-							noindex
-								a(rel='nofollow', target='_blank', href='http://vk.com/justicon') ВКонтакте
-						div
-							a.soc3(rel='nofollow', target='_blank', href='https://twitter.com/justicon_ua')
-							noindex
-								a(rel='nofollow', target='_blank', href='https://twitter.com/justicon_ua') Twitter
-						div
-							a.soc4(rel='nofollow', target='_blank', href='https://plus.google.com/102067683601334574177/posts')
-							noindex
-								a(rel='nofollow', target='_blank', href='https://plus.google.com/102067683601334574177/posts') Google+
-					.clear
-				.clear
-			.b
-				.brd
-				.wrap
-					.b1
-						p © 2008-2014. "JUSTICON.UA". Все права защищены
-						p
-							| При полном или частичном воспроизведении любых материалов сайта ссылка на источник обязательна.
-						//- p Если вы заметили ошибку, выделите текст и нажмите Ctrl + Enter
-					.b2
-						p.head
-							span Подписаться на новости
-						#comp_421871ab4f6ad4c5c6a8c670da4ca683
-							.subscribe-edit
-								form#subscribeForm(action='/', method='post')
-									input#bxajaxid_421871ab4f6ad4c5c6a8c670da4ca683_8BACKi(type='hidden', name='bxajaxid', value='421871ab4f6ad4c5c6a8c670da4ca683')
-									input(type='hidden', name='AJAX_CALL', value='Y')
-									input#sessid(type='hidden', name='sessid', value='6cc4b30ded9e68995805d92a7592f942')
-									input#s(type='text', name='EMAIL', value='Ваш e-mail')
-									input.s-1(type='submit', name='Save', value='')
-									input(type='hidden', name='PostAction', value='Add')
-									input(type='hidden', name='ID', value='')
-				.clear
-		#calld.modal
-			h3
-				span Заказать обратный звонок
-			#callwrap
-				.mfeedback
-					form(action='/include/callback.php', method='POST')
-						input#sessid_1(type='hidden', name='sessid', value='6cc4b30ded9e68995805d92a7592f942')
-						.mf-name
-							.mf-text
-								| Ваше имя
-							input(type='text', name='user_name', value='')
-						.mf-name
-							.mf-text
-								| Контактный номер
-								span.mf-req *
-							input(type='text', name='user_cont', value='')
-						.mf-name
-							.mf-text
-								| Ваш вопрос
-								span.mf-req *
-							// <input type="text" name="user_time" value="">
-							textarea(name='MESSAGE', rows='5', cols='40')
-						input(type='hidden', name='PARAMS_HASH', value='e781470f86e5a39be0e28bb1a0bd4a33')
-						input(type='submit', name='submit', value='Отправить')
-			.close.button
-		#zaprosd.modal
-			h3 Заказать услугу
-			#zaproswrap
-				.mfeedback
-					form(action='/include/zapros.php', method='POST')
-						input#sessid_2(type='hidden', name='sessid', value='6cc4b30ded9e68995805d92a7592f942')
-						.mf-name
-							.mf-text
-								| Ваше имя
-							input(type='text', name='user_name', value='')
-						.mf-name
-							.mf-text
-								| Ваши контакты
-								span.mf-req *
-							input(type='text', name='user_cont', value='')
-						.mf-message
-							.mf-text
-								| Ваш вопрос
-								span.mf-req *
-							textarea(name='MESSAGE', rows='5', cols='40')
-						input(type='hidden', name='PARAMS_HASH', value='72fe7e53c6b5d5dbed07f4c9e3169835')
-						input(type='submit', name='submit', value='Отправить')
-			.close.button
-		#zaproscon.modal
-			h3 Заказать консультацию
-			#zaprosconwrap
-				.mfeedback
-					form(action='/include/zapros.php', method='POST')
-						input#sessid_3(type='hidden', name='sessid', value='6cc4b30ded9e68995805d92a7592f942')
-						.mf-name
-							.mf-text
-								| Ваше имя
-							input(type='text', name='user_name', value='')
-						.mf-name
-							.mf-text
-								| Ваши контакты
-								span.mf-req *
-							input(type='text', name='user_cont', value='')
-						.mf-message
-							.mf-text
-								| Ваш вопрос
-								span.mf-req *
-							textarea(name='MESSAGE', rows='5', cols='40')
-						input(type='hidden', name='PARAMS_HASH', value='72fe7e53c6b5d5dbed07f4c9e3169835')
-						input(type='submit', name='submit', value='Отправить')
-			.close.button
-		#mobile-menu.modal
-			.menu
-				.wrap
-					ul
-						li.first
-							a(href='/')
-								img(src='/bitrix/templates/usticon/i/sprites/smlogo.png')
-						li
-							a(href='/uslugi/')
-								span Услуги
-							.submenu
-								a.close(href='#')
-								.inner
-									.block-item
-										.title Корпоративные правоотношения
-										ul
-											li
-												a(href='/uslugi/korp/registratsiya/') Регистрация
-											li
-												a(href='/uslugi/korp/izmeneniya/') Изменения
-											li
-												a(href='/uslugi/korp/likvidatsiya/') Ликвидация
-											li
-												a(href='/uslugi/korp/soputstv/') Сопутствующие и дополнительные услуги
-										.title Лицензии, разрешения, сертификация
-										ul
-											li
-												a(href='/uslugi/lits/litsenzii/') Лицензии
-											li
-												a(href='/uslugi/lits/razresheniya/') Разрешения
-											li
-												a(href='/uslugi/lits/sertifikatsiya/') Сертификация
-									.block-item
-										.title Судебная практика
-										ul
-											li
-												a(href='/uslugi/sud/predst/') Представительство интересов в судах
-											li
-												a(href='/uslugi/sud/ispoln/') Представительство в исполнительном производстве
-											li
-												a(href='/uslugi/sud/dolg/') Возврат долгов
-											li
-												a(href='/uslugi/sud/praktiki/') Судебные практики
-										.title Недвижимость, строительство, земельное право
-										ul
-											li
-												a(href='/uslugi/zem/nedv/') Недвижимость
-											li
-												a(href='/uslugi/zem/stroi/') Строительство
-											li
-												a(href='/uslugi/zem/zem-pr/') Земельное право
-									.block-item
-										.title Миграционное право
-										ul
-											li
-												a(href='/uslugi/migr/immigr/') Иммиграция в Украину
-											li
-												a(href='/uslugi/migr/emigr/') Эмиграция из Украины
-											li
-												a(href='/uslugi/migr/soputstv-uslugi/') Сопутствующие услуги
-										.title Интеллектуальное право
-										ul
-											li
-												a(href='/uslugi/int/reg/') Регистрация торговых марок
-											li
-												a(href='/uslugi/int/patent/') Патентование устройств, способов, веществ, внешнего вида изделия
-											li
-												a(href='/uslugi/int/avtor/') Авторское право
-									.block-item
-										.title Абонентское обслуживание
-										ul
-											li
-												a(href='/uslugi/abon/a-y/') Абонентское юридическое обслуживание
-											li
-												a(href='/uslugi/abon/b-u/') Бухгалтерские услуги. Аутсорсинг
-											li
-												a(href='/uslugi/abon/d-b/') Дополнительные бухгалтерские услуги
-											li
-												a(href='/uslugi/abon/k-s/') Кадровое сопровождение
-										.title Налоговый и юридический консалтинг. Антимонопольное право
-										ul
-											li
-												a(href='/uslugi/konsalting/nalog/') Налоговый консалтинг
-											li
-												a(href='/uslugi/konsalting/yur/') Юридический консалтинг
-											li
-												a(href='/uslugi/konsalting/antimonopolnoe-pravo/') Антимонопольное право
-											li
-												a(href='/uslugi/konsalting/tamozhenno-brokerskie-uslugi/') Таможенно-брокерские услуги
-						li
-							a(href='/prays-list/')
-								span Прайс-лист
-						li
-							a(href='#')
-								span Информ-бюро
-							.submenu
-								a.close(href='#')
-								.inner
-									.block-item
-										.title Адресная книга
-										//
-											<ul>
-											<li><a href="/inform-byuro/adresnaya-kniga/adresa-ovir/">Адреса ОВИР</a></li>
-											<li><a href="/inform-byuro/adresnaya-kniga/adresa-sudy/">Адреса суды</a></li>
-											</ul>
-										ul
-											li
-												a.root-item(href='/inform-byuro/adresnaya-kniga/adresa-ovir/') Адреса ОВИР
-											li
-												a.root-item(href='/inform-byuro/adresnaya-kniga/adresa-sudy/') Адреса суды
-										.menu-clear-left
-									.block-item
-										.title Справочная информация
-										//
-											<ul>
-											<li><a href="/inform-byuro/spravochnaya-informatsiya/kved-2012/">Квед 2012</a></li>
-											<li><a href="/inform-byuro/spravochnaya-informatsiya/kvota-immigratsii/">Квота иммиграции</a></li>
-											<li><a href="/inform-byuro/spravochnaya-informatsiya/kodifikator-stroitelnykh-rabot/">Кодификатор строительных работ</a></li>
-											</ul>
-										ul
-											li
-												a.root-item(href='/inform-byuro/spravochnaya-informatsiya/kved-2012/') Квед 2012
-											li
-												a.root-item(href='/inform-byuro/spravochnaya-informatsiya/kodifikator-stroitelnykh-rabot/') Кодификатор строительных работ
-											li
-												a.root-item(href='/inform-byuro/spravochnaya-informatsiya/kvota-immigratsii/') Квота иммиграции
-										.menu-clear-left
-									.block-item
-										.title Архив
-						li
-							a(href='/pro-bono/')
-								span Про BONO
-					.menu2
-						ul
-							li
-								a(href='#')
-									span Почему мы
-								.submenu
-									a.close(href='#')
-									.inner
-										.block-item
-											.title
-												a(href='/about/') О компании
-										.block-item
-											.title
-												a(href='/uspeshnyy-rezultat/') Успешный результат
-										.block-item
-											.title
-												a(href='/nashi-klienty/') Наши клиенты
-										.block-item
-											.title
-												a(href='/aktsii-i-predlozheniya/') Акции и предложения
-										.block-item
-											.title
-							li
-								a(href='#')
-									span Пресс-центр
-								.submenu
-									a.close(href='#')
-									.inner
-										.block-item
-											.title
-												a(href='/press-tsentr/novosti-prava/') Новости права
-										.block-item
-											.title
-												a(href='/press-tsentr/expert/') Мнение эксперта
-										.block-item
-											.title
-												a(href='/press-tsentr/publikatsii/') Публикации
-										.block-item
-											.title
-												a(href='/press-tsentr/rassylka/') Рассылка
-							li
-								a(href='/kontakty/')
-									span Контакты
-								.submenu2
-									a.close(href='#')
-									.inner
-										.title Телефоны для связи
-										.subphones
-											//
-												<div class="blackphone fl"></div><span>(044) 1000 176</span><div class="clear"></div>
-												<div class="kyivstar fl"></div><span>(044) 1000 176</span><div class="clear"></div>
-												<div class="mts fl"></div><span>(067) 1000 176</span><div class="clear"></div>
-												<div class="life fl"></div><span>(093) 1000 176</span><div class="clear"></div>
-											.blackphone.fl
-											span +38 (044) 221-4000
-											div
-												span      
-												.clear
-												.life.fl
-												span +38 (093) 1000 176
-												br
-												.viber.fl
-												span +38 (093) 1000 176
-											div
-												br
-												.clear
-												.kyivstar.fl
-												span +38 (098) 1000 176
-												.clear
-										.hr.separate10
-										span.blue
-											a.r-pimp.calll(href='#') Заказать обратный звонок
-										span.blue
-											a.r-pimp(href='#') Позвонить с сайта
-										br
-										span.blue
-											a.r-pimp.zaprosl(href='#') Заказать услугу
-										br
-										span.blue
-											a.r-pimp.zaprosconl(href='#') Заказать консультацию
-										.hr.separate10
-										|                             Email: 
-										span.blue
-											a.r-pimp(href='#') info@justicon.ua
-										br
-										|                             Skype 
-										span.blue
-											a.r-pimp(href='#') justicon.ua
-										.hr.separate10
-										.separate10.hg1
-										span.blue
-											a.r-pimp(href='/kontakty/') Посмотреть больше контактов
-					.clear
 
 		#totop.bl-button
 			span Наверх
@@ -1104,4 +697,6 @@ html(lang='en')
 					input#ok(type='button', name='ok', value='Отправить')
 					input#cancel(type='button', name='cancel', value='Отменить')
 
+		include ./partials/footer.jade
+		include ./partials/modals.jade
 	include ./partials/scripts.jade
