--- a/src/partials/footer.jade
+++ b/src/partials/footer.jade
@@ -1,7 +1,105 @@
 .footer
-	.container
-		#to-top
-			span Back to TOP
-			svg
-				path(d="m 5.6,0.84 0,-0.08 -0.08,0 L 4.77,0 4.76,0.01 4.76,0 4,0.76 l -0.08,0 0,0.08 L 0,4.76 1.19,5.95 3.92,3.22 l 0,71.54 1.68,0 L 5.6,3.22 8.34,5.95 9.52,4.76 5.6,0.84 Z m 0,0" id="path4" style="fill:#b2b6c2;fill-rule:evenodd")
-			//- img(src="img/icons/arrow_up-1.svg" alt="toTop")
+	.t
+		.wrap
+			.b1
+				p.head
+					span Услуги
+				p
+					a(href='/uslugi/korp/') Корпоративные правоотношения
+				p
+					a(href='/uslugi/lits/') Лицензии, разрешения, сертификация
+				p
+					a(href='/uslugi/sud/') Судебная практика
+				p
+					a(href='/uslugi/zem/') Недвижимость, строительство, земельное право
+				p
+					a(href='/uslugi/migr/') Миграционное право
+				p
+					a(href='/uslugi/int/') Интеллектуальное право
+				p
+					a(href='/uslugi/abon/') Абонентское обслуживание
+				p
+					a(href='/uslugi/konsalting/') Налоговый и юридический консалтинг. Антимонопольное право
+			.b2
+				p.head
+					span Почему мы
+				p
+					a(href='/about/') О компании
+				p
+					a(href='/uspeshnyy-rezultat/') Успешный результат
+				p
+					a(href='/nashi-klienty/') Наши клиенты
+			.b3
+				p.head
+					span Пресс-центр
+				p
+					a(href='/press-tsentr/novosti-prava/') Новости права
+				p
+					a(href='/press-tsentr/expert/') Мнение эксперта
+				p
+					a(href='/press-tsentr/publikatsii/') Публикации
+				p
+					a(href='/press-tsentr/rassylka/') Рассылка
+			.b4
+				p.head
+					span Информ-бюро
+				p
+					a(href='/inform-byuro/adresnaya-kniga/') Адресная книга
+				p
+					a(href='/inform-byuro/spravochnaya-informatsiya/') Справочная информация
+			.b5
+				p
+					b Контакты
+				p
+					| Тел: 
+					span.b1d (044) 221 4000
+				p
+					| Skype: 
+					span.blue justicon.ua
+				p
+					| E-mail: 
+					span.blue
+						a.email(href='mailto:info@justicon.ua') info@justicon.ua
+			.soc
+				p.head
+					span Мы в соцсетях
+				div
+					a.soc1(rel='nofollow', target='_blank', href='https://www.facebook.com/justicon')
+					noindex
+						a(rel='nofollow', target='_blank', href='https://www.facebook.com/justicon') Facebook
+				div
+					a.soc2(rel='nofollow', target='_blank', href='http://vk.com/justicon')
+					noindex
+						a(rel='nofollow', target='_blank', href='http://vk.com/justicon') ВКонтакте
+				div
+					a.soc3(rel='nofollow', target='_blank', href='https://twitter.com/justicon_ua')
+					noindex
+						a(rel='nofollow', target='_blank', href='https://twitter.com/justicon_ua') Twitter
+				div
+					a.soc4(rel='nofollow', target='_blank', href='https://plus.google.com/102067683601334574177/posts')
+					noindex
+						a(rel='nofollow', target='_blank', href='https://plus.google.com/102067683601334574177/posts') Google+
+			.clear
+		.clear
+	.b
+		.brd
+		.wrap
+			.b1
+				p © 2008-2014. "JUSTICON.UA". Все права защищены
+				p
+					| При полном или частичном воспроизведении любых материалов сайта ссылка на источник обязательна.
+				//- p Если вы заметили ошибку, выделите текст и нажмите Ctrl + Enter
+			.b2
+				p.head
+					span Подписаться на новости
+				#comp_421871ab4f6ad4c5c6a8c670da4ca683
+					.subscribe-edit
+						form#subscribeForm(action='/', method='post')
+							input#bxajaxid_421871ab4f6ad4c5c6a8c670da4ca683_8BACKi(type='hidden', name='bxajaxid', value='421871ab4f6ad4c5c6a8c670da4ca683')
+							input(type='hidden', name='AJAX_CALL', value='Y')
+							input#sessid(type='hidden', name='sessid', value='6cc4b30ded9e68995805d92a7592f942')
+							input#s(type='text', name='EMAIL', value='Ваш e-mail')
+							input.s-1(type='submit', name='Save', value='')
+							input(type='hidden', name='PostAction', value='Add')
+							input(type='hidden', name='ID', value='')
+		.clear
