--- a/src/partials/modals.jade
+++ b/src/partials/modals.jade
@@ -1,77 +1,296 @@
-
-.modal-holder#search-modal(data-cross="cross-top")
-	.modal-content
-		.modal-container
-			form(action="#").input-group
-				button(type="submit").search-icon-1
-				input(type="text" placeholder="Search")
-			.result-group
-				.articles-gallery-1
-					.container
-						//- include ./articles.jade
-
-.modal-holder#login-modal(data-cross="cross-top")
-	.modal-content
-		.modal-container
-			.login-methoods-container
-				.logotype-holder.button-group
-					img(src="img/icons/meatstudies-footer.png", alt="MEAT Studies")
-				.button-group.facebook-login-button
-					a(href="index.html") Login with
-						b  Facebook
-				.button-group.email-login-button
-					a(href="signup.html" data-modal="#login-modal-email") Login with
-						b  Email
-				.button-group
-					a(href="signup.html" data-modal="#signup-modal") Sign Up
-
-
-.modal-holder#login-modal-email(data-cross="cross-top")
-	.modal-content
-		a(href="https://www.facebook.com/").socials-login-container Login with
-			b  facebook
-		.modal-back(data-modal="#login-modal")
-		.modal-container
-			form(action="#")
-				.form-group
-					.input-group
-						label(for="popup-login-email") Email
-						input(type="text")#popup-login-email
-				.form-group
-					.input-group
-						label(for="popup-login-password") Password
-						input(type="password")#popup-login-password
-						a(href="password-recovery.html" data-modal="#password-recovery").forgot-password Forgot?
-				.button-group
-					button(type="submit")
-						span Log In
-				.button-group
-					a(href="signup.html" data-modal="#signup-modal") Sign Up
-
-.modal-holder#signup-modal(data-cross="cross-top")
-	.modal-content
-		.modal-container
-			a(href="https://www.facebook.com/").socials-login-container Login with
-				b  facebook
-			.modal-back(data-modal="#login-modal")
-			form(action="#")
-				.form-group
-					.input-group
-						label(for="popup-login-name") Name
-						input(type="text")#popup-login-name
-				.form-group
-					.input-group
-						label(for="popup-login-email") Email
-						input(type="text")#popup-login-email
-				.form-group
-					.input-group
-						label(for="popup-login-password") Password
-						input(type="password")#popup-login-password
-				.button-group
-					button(type="submit")
-						span Sign Up
-
-//- .modal-holder(data-modal-ununique="true")
-	//- .modal-content
-		//- .close-modal(data-close)
-		//- .modal-container
+#calld.modal
+	h3
+		span Заказать обратный звонок
+	#callwrap
+		.mfeedback
+			form(action='/include/callback.php', method='POST')
+				input#sessid_1(type='hidden', name='sessid', value='6cc4b30ded9e68995805d92a7592f942')
+				.mf-name
+					.mf-text
+						| Ваше имя
+					input(type='text', name='user_name', value='')
+				.mf-name
+					.mf-text
+						| Контактный номер
+						span.mf-req *
+					input(type='text', name='user_cont', value='')
+				.mf-name
+					.mf-text
+						| Ваш вопрос
+						span.mf-req *
+					// <input type="text" name="user_time" value="">
+					textarea(name='MESSAGE', rows='5', cols='40')
+				input(type='hidden', name='PARAMS_HASH', value='e781470f86e5a39be0e28bb1a0bd4a33')
+				input(type='submit', name='submit', value='Отправить')
+	.close.button
+#zaprosd.modal
+	h3 Заказать услугу
+	#zaproswrap
+		.mfeedback
+			form(action='/include/zapros.php', method='POST')
+				input#sessid_2(type='hidden', name='sessid', value='6cc4b30ded9e68995805d92a7592f942')
+				.mf-name
+					.mf-text
+						| Ваше имя
+					input(type='text', name='user_name', value='')
+				.mf-name
+					.mf-text
+						| Ваши контакты
+						span.mf-req *
+					input(type='text', name='user_cont', value='')
+				.mf-message
+					.mf-text
+						| Ваш вопрос
+						span.mf-req *
+					textarea(name='MESSAGE', rows='5', cols='40')
+				input(type='hidden', name='PARAMS_HASH', value='72fe7e53c6b5d5dbed07f4c9e3169835')
+				input(type='submit', name='submit', value='Отправить')
+	.close.button
+#zaproscon.modal
+	h3 Заказать консультацию
+	#zaprosconwrap
+		.mfeedback
+			form(action='/include/zapros.php', method='POST')
+				input#sessid_3(type='hidden', name='sessid', value='6cc4b30ded9e68995805d92a7592f942')
+				.mf-name
+					.mf-text
+						| Ваше имя
+					input(type='text', name='user_name', value='')
+				.mf-name
+					.mf-text
+						| Ваши контакты
+						span.mf-req *
+					input(type='text', name='user_cont', value='')
+				.mf-message
+					.mf-text
+						| Ваш вопрос
+						span.mf-req *
+					textarea(name='MESSAGE', rows='5', cols='40')
+				input(type='hidden', name='PARAMS_HASH', value='72fe7e53c6b5d5dbed07f4c9e3169835')
+				input(type='submit', name='submit', value='Отправить')
+	.close.button
+#mobile-menu.modal
+	.menu
+		.wrap
+			ul
+				li.first
+					a(href='/')
+						img(src='/bitrix/templates/usticon/i/sprites/smlogo.png')
+				li
+					a(href='/uslugi/')
+						span Услуги
+					.submenu
+						a.close(href='#')
+						.inner
+							.block-item
+								.title Корпоративные правоотношения
+								ul
+									li
+										a(href='/uslugi/korp/registratsiya/') Регистрация
+									li
+										a(href='/uslugi/korp/izmeneniya/') Изменения
+									li
+										a(href='/uslugi/korp/likvidatsiya/') Ликвидация
+									li
+										a(href='/uslugi/korp/soputstv/') Сопутствующие и дополнительные услуги
+								.title Лицензии, разрешения, сертификация
+								ul
+									li
+										a(href='/uslugi/lits/litsenzii/') Лицензии
+									li
+										a(href='/uslugi/lits/razresheniya/') Разрешения
+									li
+										a(href='/uslugi/lits/sertifikatsiya/') Сертификация
+							.block-item
+								.title Судебная практика
+								ul
+									li
+										a(href='/uslugi/sud/predst/') Представительство интересов в судах
+									li
+										a(href='/uslugi/sud/ispoln/') Представительство в исполнительном производстве
+									li
+										a(href='/uslugi/sud/dolg/') Возврат долгов
+									li
+										a(href='/uslugi/sud/praktiki/') Судебные практики
+								.title Недвижимость, строительство, земельное право
+								ul
+									li
+										a(href='/uslugi/zem/nedv/') Недвижимость
+									li
+										a(href='/uslugi/zem/stroi/') Строительство
+									li
+										a(href='/uslugi/zem/zem-pr/') Земельное право
+							.block-item
+								.title Миграционное право
+								ul
+									li
+										a(href='/uslugi/migr/immigr/') Иммиграция в Украину
+									li
+										a(href='/uslugi/migr/emigr/') Эмиграция из Украины
+									li
+										a(href='/uslugi/migr/soputstv-uslugi/') Сопутствующие услуги
+								.title Интеллектуальное право
+								ul
+									li
+										a(href='/uslugi/int/reg/') Регистрация торговых марок
+									li
+										a(href='/uslugi/int/patent/') Патентование устройств, способов, веществ, внешнего вида изделия
+									li
+										a(href='/uslugi/int/avtor/') Авторское право
+							.block-item
+								.title Абонентское обслуживание
+								ul
+									li
+										a(href='/uslugi/abon/a-y/') Абонентское юридическое обслуживание
+									li
+										a(href='/uslugi/abon/b-u/') Бухгалтерские услуги. Аутсорсинг
+									li
+										a(href='/uslugi/abon/d-b/') Дополнительные бухгалтерские услуги
+									li
+										a(href='/uslugi/abon/k-s/') Кадровое сопровождение
+								.title Налоговый и юридический консалтинг. Антимонопольное право
+								ul
+									li
+										a(href='/uslugi/konsalting/nalog/') Налоговый консалтинг
+									li
+										a(href='/uslugi/konsalting/yur/') Юридический консалтинг
+									li
+										a(href='/uslugi/konsalting/antimonopolnoe-pravo/') Антимонопольное право
+									li
+										a(href='/uslugi/konsalting/tamozhenno-brokerskie-uslugi/') Таможенно-брокерские услуги
+				li
+					a(href='/prays-list/')
+						span Прайс-лист
+				li
+					a(href='#')
+						span Информ-бюро
+					.submenu
+						a.close(href='#')
+						.inner
+							.block-item
+								.title Адресная книга
+								//
+									<ul>
+									<li><a href="/inform-byuro/adresnaya-kniga/adresa-ovir/">Адреса ОВИР</a></li>
+									<li><a href="/inform-byuro/adresnaya-kniga/adresa-sudy/">Адреса суды</a></li>
+									</ul>
+								ul
+									li
+										a.root-item(href='/inform-byuro/adresnaya-kniga/adresa-ovir/') Адреса ОВИР
+									li
+										a.root-item(href='/inform-byuro/adresnaya-kniga/adresa-sudy/') Адреса суды
+								.menu-clear-left
+							.block-item
+								.title Справочная информация
+								//
+									<ul>
+									<li><a href="/inform-byuro/spravochnaya-informatsiya/kved-2012/">Квед 2012</a></li>
+									<li><a href="/inform-byuro/spravochnaya-informatsiya/kvota-immigratsii/">Квота иммиграции</a></li>
+									<li><a href="/inform-byuro/spravochnaya-informatsiya/kodifikator-stroitelnykh-rabot/">Кодификатор строительных работ</a></li>
+									</ul>
+								ul
+									li
+										a.root-item(href='/inform-byuro/spravochnaya-informatsiya/kved-2012/') Квед 2012
+									li
+										a.root-item(href='/inform-byuro/spravochnaya-informatsiya/kodifikator-stroitelnykh-rabot/') Кодификатор строительных работ
+									li
+										a.root-item(href='/inform-byuro/spravochnaya-informatsiya/kvota-immigratsii/') Квота иммиграции
+								.menu-clear-left
+							.block-item
+								.title Архив
+				li
+					a(href='/pro-bono/')
+						span Про BONO
+			.menu2
+				ul
+					li
+						a(href='#')
+							span Почему мы
+						.submenu
+							a.close(href='#')
+							.inner
+								.block-item
+									.title
+										a(href='/about/') О компании
+								.block-item
+									.title
+										a(href='/uspeshnyy-rezultat/') Успешный результат
+								.block-item
+									.title
+										a(href='/nashi-klienty/') Наши клиенты
+								.block-item
+									.title
+										a(href='/aktsii-i-predlozheniya/') Акции и предложения
+								.block-item
+									.title
+					li
+						a(href='#')
+							span Пресс-центр
+						.submenu
+							a.close(href='#')
+							.inner
+								.block-item
+									.title
+										a(href='/press-tsentr/novosti-prava/') Новости права
+								.block-item
+									.title
+										a(href='/press-tsentr/expert/') Мнение эксперта
+								.block-item
+									.title
+										a(href='/press-tsentr/publikatsii/') Публикации
+								.block-item
+									.title
+										a(href='/press-tsentr/rassylka/') Рассылка
+					li
+						a(href='/kontakty/')
+							span Контакты
+						.submenu2
+							a.close(href='#')
+							.inner
+								.title Телефоны для связи
+								.subphones
+									//
+										<div class="blackphone fl"></div><span>(044) 1000 176</span><div class="clear"></div>
+										<div class="kyivstar fl"></div><span>(044) 1000 176</span><div class="clear"></div>
+										<div class="mts fl"></div><span>(067) 1000 176</span><div class="clear"></div>
+										<div class="life fl"></div><span>(093) 1000 176</span><div class="clear"></div>
+									.blackphone.fl
+									span +38 (044) 221-4000
+									div
+										span      
+										.clear
+										.life.fl
+										span +38 (093) 1000 176
+										br
+										.viber.fl
+										span +38 (093) 1000 176
+									div
+										br
+										.clear
+										.kyivstar.fl
+										span +38 (098) 1000 176
+										.clear
+								.hr.separate10
+								span.blue
+									a.r-pimp.calll(href='#') Заказать обратный звонок
+								span.blue
+									a.r-pimp(href='#') Позвонить с сайта
+								br
+								span.blue
+									a.r-pimp.zaprosl(href='#') Заказать услугу
+								br
+								span.blue
+									a.r-pimp.zaprosconl(href='#') Заказать консультацию
+								.hr.separate10
+								|                             Email: 
+								span.blue
+									a.r-pimp(href='#') info@justicon.ua
+								br
+								|                             Skype 
+								span.blue
+									a.r-pimp(href='#') justicon.ua
+								.hr.separate10
+								.separate10.hg1
+								span.blue
+									a.r-pimp(href='/kontakty/') Посмотреть больше контактов
+			.clear
